--- a/FreeFemDays/main.tex
+++ b/FreeFemDays/main.tex
@@ -175,16 +175,24 @@
 % type Helmholtz.
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Conclusion}{}
-    \begin{figure}
+\begin{frame}{Polynomial basis}
+      \begin{figure}
         
     %    \begin{center}        
          \resizebox{0.5\textwidth}{!}{%
     \input{figures/tikz/element_p6_Lagrange.tikz}
          }
     %    \end{center}
-    \caption{Fnite element $P_6$}
+    \caption{Finite element $P_6$}
     \end{figure}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Conclusion}{}
+
 \end{frame}
 
 \end{document}
