ajout de quelques slide + corrections reste à remplir le constructeur de TypeOfFE

--- a/FreeFemDays/header.tex
+++ b/FreeFemDays/header.tex
@@ -85,6 +85,7 @@
 %\setlist[itemize,2]{label=\scalebox{1.2}{\textbullet}}  % 1.5 = 150% de taille
 \setlist[itemize,2]{label=\scalebox{1.2}{\(\circ\)}}
 \usepackage{listings}
+\usepackage{fvextra}
 
 %----------------------------------------------------
 % Colors
