Test verif debut

--- a/FreeFemDays/main.tex
+++ b/FreeFemDays/main.tex
@@ -215,10 +215,10 @@
       \end{tikzpicture}
       };
 
-      \node at (current page.north west) [xshift=8.5cm, yshift=-5.8cm] {
+      \node at (current page.north west) [xshift=10.1cm, yshift=-5.8cm] {
       \begin{tikzpicture}
-          \draw [color=blue,decorate,decoration={amplitude=10mm}](0.4,0) rectangle (6.8,0.5);
-        %\node at (8,0.25) {\textcolor{blue}{}};
+          \draw [color=blue, line width=0.5mm](0.4,0) rectangle (6.8,0.5);
+          \node[right] at (7,0.25){\textcolor{blue}{Parent class constructor}};
         \end{tikzpicture}
       };
   \end{tikzpicture}
