--- a/FreeFemDays/main.tex
+++ b/FreeFemDays/main.tex
@@ -202,6 +202,13 @@
       \end{tikzpicture}
       };
 
+      \node at (current page.north west) [xshift=9cm, yshift=-3.15cm] {
+      \begin{tikzpicture}
+          \draw[color=blue][->, thick] (0,0) -- (1,0) ;
+          \node at (3.9,0) {\textcolor{blue}{Interpolation weights Not needed for Lagrange}};
+      \end{tikzpicture}
+      };
+
       \node at (current page.north west) [xshift=9.8cm, yshift=-3.85cm] {
       \begin{tikzpicture}
           \draw[decorate,color=blue, decoration={brace, amplitude=10pt, mirror}]
@@ -239,7 +246,7 @@
  Array containing topological information & \texttt{Data} & \texttt{Data}  \\  
  Number of subdivisions for plotting  & \texttt{4} & $k$  \\  
  Number of component sub-finite elements & \texttt{1} & \texttt{1}  \\  
- nombre de dof + dof permutation non sym sur aretes & \texttt{15+6} & cell9  \\  
+ \# dof+ non-symmetric permutation of dofs on edges & \texttt{15+6} & \# dof+ $3\times ( (k \% 2) ? (k- 1) : (k - 2)) $  \\  
  Number of interpolation points & \texttt{15} & $\displaystyle\frac{(k+1)(k+2)}{2}$  \\  
  Interpolation weights array  & \texttt{0} & \texttt{0}  \\  
 
