--- a/FreeFemDays/00_title.tex
+++ b/FreeFemDays/00_title.tex
@@ -6,7 +6,7 @@
     \textblockcolor{colorStruct}
     \begin{center}
       \vspace{1mm}
-      {\LARGE\color{white}{High-order Lagrange elements in  \texttt{FreeFem++}}   
+      {\LARGE\color{white}{Arbitrary-order  Lagrange elements in  \texttt{FreeFem++}}   
 }
       \vspace{1mm}
     \end{center}
