--- a/FreeFemDays/main.tex
+++ b/FreeFemDays/main.tex
@@ -245,7 +245,7 @@
  Dimension FE & \texttt{1} & \texttt{1}  \\
  Array containing topological information & \texttt{Data} & \texttt{Data}  \\  
  Number of subdivisions for plotting  & \texttt{4} & $k$  \\  
- Number of component sub-finite elements & \texttt{1} & \texttt{1}  \\  
+ Number of sub-finite elements & \texttt{1} & \texttt{1}  \\  
  \# dof+ non-symmetric permutation of dofs on edges & \texttt{15+6} & \# dof+ $3\times ( (k \% 2) ? (k- 1) : (k - 2)) $  \\  
  Number of interpolation points & \texttt{15} & $\displaystyle\frac{(k+1)(k+2)}{2}$  \\  
  Normal components array  & \texttt{0} & \texttt{0}  \\  
